--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,9 +5,12 @@ edition = "2021"
 
 [dependencies]
 anyhow = "1.0.96"
+bincode = "1.3.3"
 clap = { version = "4.5.30", features = ["derive"] }
 csv = "1.3.1"
 flate2 = { version = "1.0.35", features = ["zlib-ng"] }
 fst = { version = "0.4.7", features = ["levenshtein"] }
 levenshtein = "1.0.5"
 memmap = "0.7.0"
+rocksdb = "0.23.0"
+serde = { version = "1.0.218", features = ["derive"] }
