--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,13 +5,13 @@ edition = "2021"
 
 [dependencies]
 anyhow = "1.0.96"
+axum = "0.8.1"
 bincode = "1.3.3"
 clap = { version = "4.5.30", features = ["derive"] }
 csv = "1.3.1"
 flate2 = { version = "1.0.35", features = ["zlib-ng"] }
 fst = { version = "0.4.7", features = ["levenshtein"] }
 levenshtein = "1.0.5"
-memmap = "0.7.0"
 regex-automata = "0.4.9"
-rocksdb = "0.23.0"
 serde = { version = "1.0.218", features = ["derive"] }
+tokio = { version = "1.43.0", features = ["full"] }
