--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+aide = { version = "0.14.1", features = ["axum", "axum-extra", "axum-json", "axum-tokio"] }
 anyhow = "1.0.96"
 axum = "0.8.1"
 bincode = "1.3.3"
@@ -13,5 +14,6 @@ flate2 = { version = "1.1.0", features = ["zlib-ng"] }
 fst = { version = "0.4.7", features = ["levenshtein"] }
 levenshtein = "1.0.5"
 regex-automata = "0.4.9"
+schemars = "0.8.22"
 serde = { version = "1.0.218", features = ["derive"] }
 tokio = { version = "1.43.0", features = ["full"] }
