--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,9 +4,9 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-aide = { version = "0.14.1", features = ["axum", "axum-extra", "axum-json", "axum-tokio"] }
+aide = { version = "0.14.1", features = ["axum", "axum-json", "axum-tokio", "macros", "swagger"] }
 anyhow = "1.0.96"
-axum = "0.8.1"
+axum = { version = "0.8.1", features = ["macros"] }
 bincode = "1.3.3"
 clap = { version = "4.5.31", features = ["derive"] }
 csv = "1.3.1"
@@ -16,4 +16,4 @@ levenshtein = "1.0.5"
 regex-automata = "0.4.9"
 schemars = "0.8.22"
 serde = { version = "1.0.218", features = ["derive"] }
-tokio = { version = "1.43.0", features = ["full"] }
+tokio = { version = "1.43.0", features = ["full", "macros"] }
