feat!: Implemented DUUI API

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,4 +20,13 @@ levenshtein = "1.0.5"
 regex-automata = "0.4.9"
 schemars = "0.8.22"
 serde = { version = "1.0.218", features = ["derive"] }
+serde-aux = "4.6.0"
 tokio = { version = "1.43.0", features = ["full", "macros"] }
+tower-http = { version = "0.6.2", features = ["fs", "trace"] }
+tracing = "0.1.41"
+tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
+
+[features]
+default = ["geonames_routes", "duui"]
+geonames_routes = []
+duui = []
