--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,8 +13,10 @@ aide = { version = "0.14.1", features = [
 ] }
 anyhow = "1.0.96"
 axum = { version = "0.8.1", features = ["macros"] }
+bzip2-rs = { version = "0.1.2", features = ["rustc_1_51"], optional = true }
 clap = { version = "4.5.31", features = ["derive"] }
 csv = "1.3.1"
+flate2 = { version = "1.1.2", optional = true }
 fst = { version = "0.4.7", features = ["levenshtein"] }
 levenshtein = "1.0.5"
 regex-automata = "0.4.9"
@@ -25,8 +27,12 @@ tokio = { version = "1.43.0", features = ["full", "macros"] }
 tower-http = { version = "0.6.2", features = ["fs", "trace"] }
 tracing = "0.1.41"
 tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
+xz = { version = "0.1.0", optional = true }
 
 [features]
-default = ["geonames_routes", "duui"]
+default = ["geonames_routes", "bzip2", "gzip", "xz"]
 geonames_routes = []
-duui = []
+bzip2 = ["dep:bzip2-rs"]
+gzip = ["dep:flate2"]
+xz = ["dep:xz"]
+duui = ["bzip2", "gzip", "xz"]
