--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "geonames-fst"
-version = "0.4.2"
+version = "0.4.3"
 edition = "2021"
 
 [dependencies]
@@ -30,7 +30,7 @@ tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
 xz = { version = "0.1.0", optional = true }
 
 [features]
-default = ["geonames_routes", "bzip2", "gzip", "xz"]
+default = ["geonames_routes", "bzip2", "gzip", "xz", "duui"]
 geonames_routes = []
 bzip2 = ["dep:bzip2-rs"]
 gzip = ["dep:flate2"]
